// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBlock renders as h2 html tag 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
}

<h2
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TextBlock renders as span html tag 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  display: inline-block;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TextBlock renders with custom style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TextBlock renders with custom typography preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: -0.5px;
  padding: 0.5px 0px;
}

.emotion-0::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-0::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TextBlock renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`TextBlock renders with no text cropping 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: -0.5px;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;
